[workspace]
members = [
    "crates/proxy-core",
    "crates/proxy-rewriter",
    "crates/proxy-server",
    "crates/proxy-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
http = "1.2"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
wasm-bindgen = "0.2"
web-sys = "0.3"

