[workspace]
members = [
  "crates/proxy-rewriter",
  "crates/proxy-wasm",
  "crates/proxy-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["WebRascal"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
http = "1.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
wasm-bindgen = "0.2"
