[package]
name = "proxy-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proxy-core = { path = "../proxy-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Navigator", "ServiceWorkerContainer", "Window"] }

